--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.Learning_project"
         tools:targetApi="31">
         <activity
+            android:noHistory="true"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
